--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.5",
     "semantic-ui-css": "^2.3.3",
-    "semantic-ui-react": "^0.82.3"
+    "semantic-ui-react": "^0.82.3",
+    "whatwg-fetch": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
