--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "leaflet": "^1.3.4",
+    "leaflet.markercluster": "^1.4.0",
     "moment": "^2.22.2",
     "react": "^16.4.2",
     "react-datetime": "^2.15.0",
