--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "lc-client": "^0.1.3",
     "leaflet": "^1.3.4",
     "leaflet-loading": "^0.1.24",
     "leaflet.markercluster": "^1.4.0",
