--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "lc-client": "^0.1.3",
+    "lc-client": "git://github.com/linkedconnections/client.js.git#feature-delijn",
     "leaflet": "^1.3.4",
     "leaflet-loading": "^0.1.24",
-    "leaflet.markercluster": "^1.4.0",
+    "leaflet.markercluster": "^1.4.1",
     "moment": "^2.22.2",
-    "react": "^16.4.2",
+    "react": "^16.5.1",
     "react-datetime": "^2.15.0",
-    "react-dom": "^16.4.2",
+    "react-dom": "^16.5.1",
     "react-scripts": "1.1.5",
     "semantic-ui-css": "^2.3.3",
-    "semantic-ui-react": "^0.82.3",
+    "semantic-ui-react": "^0.82.5",
     "whatwg-fetch": "^2.0.4"
   },
   "scripts": {
